tooling/nargo_cli/tests/snapshots/execution_success/regression_8305/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(a: i32) -> pub i32 {
    let mut r: i32 = 0;
    let s: i32 = -2;
    let e: i32 = -1;
    for _ in s - 0..e + 0 {
        r = r + a;
    }
    r
}
